@@ -5,6 +5,7 @@ This file includes a list of high level updates for each milestone release.
 -----
 
   * Remove isRectContour and ksNestedFillRects from public
+  * Start to move nested SkPath types (e.g. Direction, Verb) up to root level in SkPathTypes.h
 
 Milestone 79
 
